--- a/Xplore_rules/build_electricity_demand_base.ipynb
+++ b/Xplore_rules/build_electricity_demand_base.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(ds)"
+    "ds"
    ]
   },
   {
@@ -93,14 +93,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "ds['electricity demand (MW)'].sum(dim='bus').plot()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur",
+   "display_name": "pypsa-eur_linux-pinned",
    "language": "python",
    "name": "python3"
   },
