fixed generator classes

--- a/Xplore_rules/add_electricity.ipynb
+++ b/Xplore_rules/add_electricity.ipynb
@@ -500,8 +500,11 @@
     "#################### Parameters\n",
     "carrier = 'onwind'\n",
     "\n",
-    "start = '2013-03-01'\n",
-    "end = '2013-03-10'\n",
+    "# For wind and solar, define class (number or 'all').\n",
+    "gen_class = 'all'\n",
+    "    \n",
+    "start = '2023-03-01'\n",
+    "end = '2023-03-10'\n",
     "\n",
     "\n",
     "\n",
@@ -509,7 +512,10 @@
     "fig_size = [10,4]\n",
     "fig, ax = plt.subplots(figsize=fig_size)\n",
     "\n",
-    "ggt_pmaxpu.loc[start:end].filter(like=carrier).plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
+    "if ('wind' in carrier or 'solar' in carrier) and gen_class != 'all':\n",
+    "    ggt_pmaxpu.loc[start:end].filter(like=f'{gen_class} {carrier}').plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
+    "else:\n",
+    "    ggt_pmaxpu.loc[start:end].filter(like=carrier).plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
     "\n",
     "ax.grid(True, linestyle='--', alpha=0.25)\n",
     "ax.set_ylabel('')"
@@ -539,6 +545,9 @@
     "\n",
     "##### Select carrier:\n",
     "carrier = 'onwind'\n",
+    "\n",
+    "# For wind and solar, define class (number).\n",
+    "gen_class = 0\n",
     "\n",
     "##### Select feature (uncomment one of the following):\n",
     "feature = 'CF' \n",
@@ -572,7 +581,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature at regions\n",
-    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local)"
+    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local, gen_class)"
    ]
   },
   {
@@ -807,8 +816,8 @@
    "outputs": [],
    "source": [
     "#################### Parameters\n",
-    "start = '2013-03-01'\n",
-    "end = '2013-03-10'\n",
+    "start = '2023-03-01'\n",
+    "end = '2023-03-10'\n",
     "\n",
     "\n",
     "\n",
@@ -1131,7 +1140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur",
+   "display_name": "pypsa-eur_linux-pinned",
    "language": "python",
    "name": "python3"
   },
