--- a/Xplore_rules/cluster_network.ipynb
+++ b/Xplore_rules/cluster_network.ipynb
@@ -424,7 +424,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur",
+   "display_name": "pypsa-eur_linux-pinned",
    "language": "python",
    "name": "python3"
   },
