--- a/Xplore_rules/prepare_sector_network.ipynb
+++ b/Xplore_rules/prepare_sector_network.ipynb
@@ -503,8 +503,11 @@
     "#################### Parameters\n",
     "carrier = 'onwind'\n",
     "\n",
-    "start = '2013-01-01'\n",
-    "end = '2013-12-31'\n",
+    "# For wind and solar, define class (number or 'all').\n",
+    "gen_class = 'all'\n",
+    "    \n",
+    "start = '2023-03-01'\n",
+    "end = '2023-03-10'\n",
     "\n",
     "\n",
     "\n",
@@ -512,9 +515,12 @@
     "fig_size = [10,4]\n",
     "fig, ax = plt.subplots(figsize=fig_size)\n",
     "\n",
-    "ggt_pmaxpu.loc[start:end].filter(like=carrier).plot(ax=ax, alpha=.8, legend=False, linewidth=.5)\n",
+    "if ('wind' in carrier or 'solar' in carrier) and gen_class != 'all':\n",
+    "    ggt_pmaxpu.loc[start:end].filter(like=f'{gen_class} {carrier}').plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
+    "else:\n",
+    "    ggt_pmaxpu.loc[start:end].filter(like=carrier).plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
     "\n",
-    "ax.grid(True, linestyle='--', alpha=0.75)\n",
+    "ax.grid(True, linestyle='--', alpha=0.25)\n",
     "ax.set_ylabel('')"
    ]
   },
@@ -542,6 +548,9 @@
     "\n",
     "##### Select carrier:\n",
     "carrier = 'onwind'\n",
+    "\n",
+    "# For wind and solar, define class (number).\n",
+    "gen_class = 0\n",
     "\n",
     "##### Select feature (uncomment one of the following):\n",
     "feature = 'CF' \n",
@@ -575,7 +584,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature at regions\n",
-    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local)"
+    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local, gen_class)"
    ]
   },
   {
@@ -944,8 +953,8 @@
    "outputs": [],
    "source": [
     "#################### Parameters\n",
-    "start = '2013-01-01'\n",
-    "end = '2013-12-31'\n",
+    "start = '2023-01-01'\n",
+    "end = '2023-12-31'\n",
     "\n",
     "\n",
     "\n",
@@ -1282,7 +1291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
