--- a/Xplore_rules/solve_sector_network.ipynb
+++ b/Xplore_rules/solve_sector_network.ipynb
@@ -267,7 +267,7 @@
     "#################### Parameters\n",
     "\n",
     "### Select carrier\n",
-    "carrier = 'solar'\n",
+    "carrier = 'onwind'\n",
     "\n",
     "### Select feature (uncomment one of the following):\n",
     "# feature = 'area' \n",
@@ -1331,7 +1331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
