--- a/Xplore_rules/prepare_network.ipynb
+++ b/Xplore_rules/prepare_network.ipynb
@@ -501,8 +501,11 @@
     "#################### Parameters\n",
     "carrier = 'onwind'\n",
     "\n",
-    "start = '2013-03-01'\n",
-    "end = '2013-03-10'\n",
+    "# For wind and solar, define class (number or 'all').\n",
+    "gen_class = 'all'\n",
+    "    \n",
+    "start = '2023-03-01'\n",
+    "end = '2023-03-10'\n",
     "\n",
     "\n",
     "\n",
@@ -510,7 +513,10 @@
     "fig_size = [10,4]\n",
     "fig, ax = plt.subplots(figsize=fig_size)\n",
     "\n",
-    "ggt_pmaxpu.loc[start:end].filter(like=carrier).plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
+    "if ('wind' in carrier or 'solar' in carrier) and gen_class != 'all':\n",
+    "    ggt_pmaxpu.loc[start:end].filter(like=f'{gen_class} {carrier}').plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
+    "else:\n",
+    "    ggt_pmaxpu.loc[start:end].filter(like=carrier).plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
     "\n",
     "ax.grid(True, linestyle='--', alpha=0.25)\n",
     "ax.set_ylabel('')"
@@ -540,6 +546,9 @@
     "\n",
     "##### Select carrier:\n",
     "carrier = 'onwind'\n",
+    "\n",
+    "# For wind and solar, define class (number).\n",
+    "gen_class = 0\n",
     "\n",
     "##### Select feature (uncomment one of the following):\n",
     "feature = 'CF' \n",
@@ -573,7 +582,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature at regions\n",
-    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local)"
+    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local, gen_class)"
    ]
   },
   {
@@ -808,8 +817,8 @@
    "outputs": [],
    "source": [
     "#################### Parameters\n",
-    "start = '2013-03-01'\n",
-    "end = '2013-03-10'\n",
+    "start = '2023-03-01'\n",
+    "end = '2023-03-10'\n",
     "\n",
     "\n",
     "\n",
@@ -1146,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
