--- a/Xplore_rules/prepare_sector_network.ipynb
+++ b/Xplore_rules/prepare_sector_network.ipynb
@@ -337,7 +337,7 @@
     "#################### Parameters\n",
     "\n",
     "### Select NUTS level\n",
-    "NUTS_level =2\n",
+    "NUTS_level = 2\n",
     "\n",
     "\n",
     "\n",
@@ -954,7 +954,23 @@
    "source": [
     "#################### Parameters\n",
     "start = '2023-01-01'\n",
-    "end = '2023-12-31'\n",
+    "end = '2023-01-31'\n",
+    "\n",
+    "select_sector = 'all'   # No filtering\n",
+    "select_sector = 'electricity'   # Only columns with name 'ESnn', n being any number\n",
+    "select_sector = 'land transport EV'   # Only columns with name 'land transport EV'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Operations\n",
+    "if select_sector == 'all':\n",
+    "    lot_pset_filtered = lot_pset\n",
+    "\n",
+    "if select_sector == 'electricity':\n",
+    "    lot_pset_filtered = lot_pset.loc[:, lot_pset.columns.str.match(r'^ES\\d{2}$')]\n",
+    "\n",
+    "if select_sector == 'land transport EV':\n",
+    "    lot_pset_filtered = lot_pset.filter(like=select_sector, axis=1)\n",
     "\n",
     "\n",
     "\n",
@@ -962,7 +978,7 @@
     "fig_size = [10,4]\n",
     "fig, ax = plt.subplots(figsize=fig_size)\n",
     "\n",
-    "lot_pset.loc[start:end].plot(ax=ax, alpha=.8, legend=False, linewidth=.5)\n",
+    "lot_pset_filtered.loc[start:end].plot(ax=ax, alpha=.8, legend=False, linewidth=.5)\n",
     "\n",
     "ax.grid(True, linestyle='--', alpha=1)\n",
     "ax.set_ylabel('MW')"
