--- a/Xplore_rules/solve_sector_network.ipynb
+++ b/Xplore_rules/solve_sector_network.ipynb
@@ -29,7 +29,7 @@
     "prefix = ''\n",
     "\n",
     "### Network\n",
-    "clusters = 5\n",
+    "clusters = ''\n",
     "opts = ''\n",
     "sector_opts = ''\n",
     "horizon = '2030'"
@@ -182,13 +182,6 @@
     "\n",
     "### Add map features\n",
     "xp.map_add_features(ax1, params['map_add_features'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot the increase in line capacities."
    ]
   },
   {
@@ -1317,7 +1310,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur",
+   "display_name": "pypsa-spain_20250619",
    "language": "python",
    "name": "python3"
   },
@@ -1331,7 +1324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
