--- a/Xplore_rules/solve_sector_network.ipynb
+++ b/Xplore_rules/solve_sector_network.ipynb
@@ -758,14 +758,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variable: `n.stores`"
+    "### Variable: `n.loads_t[p_set]`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Place `n.stores` in a dataFrame and show its content."
+    "Place `n.loads_t[p_set]` in a dataFrame and show its content."
    ]
   },
   {
@@ -774,9 +774,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "st = n.stores\n",
+    "lot_pset = n.loads_t['p_set']\n",
     "\n",
-    "st.head()"
+    "lot_pset.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Time series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do the load time series look like?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "start = '2023-01-01'\n",
+    "end = '2023-01-31'\n",
+    "\n",
+    "select_sector = 'all'   # No filtering\n",
+    "select_sector = 'electricity'   # Only columns with name 'ESnn', n being any number\n",
+    "select_sector = 'land transport EV'   # Only columns with name 'land transport EV'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Operations\n",
+    "if select_sector == 'all':\n",
+    "    lot_pset_filtered = lot_pset\n",
+    "\n",
+    "if select_sector == 'electricity':\n",
+    "    lot_pset_filtered = lot_pset.loc[:, lot_pset.columns.str.match(r'^ES\\d{2}$')]\n",
+    "\n",
+    "if select_sector == 'land transport EV':\n",
+    "    lot_pset_filtered = lot_pset.filter(like=select_sector, axis=1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Figure\n",
+    "fig_size = [10,4]\n",
+    "fig, ax = plt.subplots(figsize=fig_size)\n",
+    "\n",
+    "lot_pset_filtered.loc[start:end].plot(ax=ax, alpha=.8, legend=False, linewidth=.5)\n",
+    "\n",
+    "ax.grid(True, linestyle='--', alpha=1)\n",
+    "ax.set_ylabel('MW')"
    ]
   },
   {
@@ -790,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot a map showing a particular feature of a store carrier at each region.\n",
+    "Plot a map showing a particular feature of the load at each region.\n",
     "\n",
     "Then, show another map with the same information aggregated to a certain NUTS level (weighted with ovelap area)."
    ]
@@ -803,12 +855,10 @@
    "source": [
     "#################### Parameters\n",
     "\n",
-    "### Select carrier (uncomment one of the following):\n",
-    "carrier = 'battery'\n",
-    "# carrier = 'H2 Store'\n",
-    "\n",
     "### Select feature (uncomment one of the following):\n",
-    "feature = 'e_nom_opt'\n",
+    "# feature = 'area' \n",
+    "# feature = 'annual_load'\n",
+    "feature = 'annual_load_density'\n",
     "\n",
     "\n",
     "\n",
@@ -830,7 +880,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature at regions\n",
-    "xp.map_network_stores(carrier, n, feature, ax, gdf_regions_onshore, params['map_network_stores'], params_local)"
+    "xp.map_network_loadst_pset(n, feature, ax, gdf_regions_onshore, params['map_network_loadst_pset'], params_local)"
    ]
   },
   {
@@ -842,7 +892,7 @@
     "#################### Parameters\n",
     "\n",
     "### Select NUTS level\n",
-    "NUTS_level = 3\n",
+    "NUTS_level = 2\n",
     "\n",
     "\n",
     "\n",
@@ -867,14 +917,11 @@
     "    gdf_NUTS = gdf_NUTS3    \n",
     "\n",
     "\n",
-    "### Add regions\n",
-    "xp.map_add_region(ax, gdf_regions_onshore, params['map_add_region'], is_offshore=is_offshore)\n",
-    "\n",
     "### Add map features\n",
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature aggregated at NUTS regions\n",
-    "xp.map_NUTS_stores(carrier, n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_stores'], params_local)"
+    "xp.map_NUTS_loadst_pset(n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_loadst_pset'], params_local)"
    ]
   },
   {
@@ -1063,6 +1110,129 @@
     "ax.set_title('Storage units')\n",
     "ax.grid(True, linestyle='--', alpha=0.5)\n",
     "ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variable: `n.stores`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Place `n.stores` in a dataFrame and show its content."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st = n.stores\n",
+    "\n",
+    "st.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Maps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot a map showing a particular feature of a store carrier at each region.\n",
+    "\n",
+    "Then, show another map with the same information aggregated to a certain NUTS level (weighted with ovelap area)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "\n",
+    "### Select carrier (uncomment one of the following):\n",
+    "carrier = 'battery'\n",
+    "# carrier = 'H2 Store'\n",
+    "\n",
+    "### Select feature (uncomment one of the following):\n",
+    "feature = 'e_nom_opt'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Local params\n",
+    "params_local = {}\n",
+    "params_local['vmin'] = ''   # Leave empty for automatic value \n",
+    "params_local['vmax'] = ''   # Leave empty for automatic value\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Figure\n",
+    "fig_size = [12,6]\n",
+    "crs = ccrs.PlateCarree()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=fig_size, subplot_kw={'projection': crs})\n",
+    "\n",
+    "\n",
+    "### Add map features\n",
+    "xp.map_add_features(ax, params['map_add_features'])\n",
+    "\n",
+    "### Add network feature at regions\n",
+    "xp.map_network_stores(carrier, n, feature, ax, gdf_regions_onshore, params['map_network_stores'], params_local)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "\n",
+    "### Select NUTS level\n",
+    "NUTS_level = 3\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Local params\n",
+    "params_local = {}\n",
+    "params_local['vmin'] = ''   # Leave empty for automatic value \n",
+    "params_local['vmax'] = ''   # Leave empty for automatic value\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Figure\n",
+    "fig_size = [12,6]\n",
+    "crs = ccrs.PlateCarree()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=fig_size, subplot_kw={'projection': crs})\n",
+    "\n",
+    "\n",
+    "### Define NUTS file\n",
+    "if NUTS_level==2:\n",
+    "    gdf_NUTS = gdf_NUTS2\n",
+    "if NUTS_level==3:\n",
+    "    gdf_NUTS = gdf_NUTS3    \n",
+    "\n",
+    "\n",
+    "### Add regions\n",
+    "xp.map_add_region(ax, gdf_regions_onshore, params['map_add_region'], is_offshore=is_offshore)\n",
+    "\n",
+    "### Add map features\n",
+    "xp.map_add_features(ax, params['map_add_features'])\n",
+    "\n",
+    "### Add network feature aggregated at NUTS regions\n",
+    "xp.map_NUTS_stores(carrier, n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_stores'], params_local)"
    ]
   },
   {
