--- a/Xplore_rules/prepare_sector_network.ipynb
+++ b/Xplore_rules/prepare_sector_network.ipynb
@@ -956,18 +956,15 @@
     "start = '2023-01-01'\n",
     "end = '2023-01-31'\n",
     "\n",
+    "##### Select sector demand (uncomment one of the following)\n",
     "select_sector = 'all'   # No filtering\n",
-    "select_sector = 'electricity'   # Only columns with name 'ESnn', n being any number\n",
-    "select_sector = 'land transport EV'   # Only columns with name 'land transport EV'\n",
+    "# select_sector = 'land transport EV'   # Only columns with name 'land transport EV'\n",
     "\n",
     "\n",
     "\n",
     "#################### Operations\n",
     "if select_sector == 'all':\n",
     "    lot_pset_filtered = lot_pset\n",
-    "\n",
-    "if select_sector == 'electricity':\n",
-    "    lot_pset_filtered = lot_pset.loc[:, lot_pset.columns.str.match(r'^ES\\d{2}$')]\n",
     "\n",
     "if select_sector == 'land transport EV':\n",
     "    lot_pset_filtered = lot_pset.filter(like=select_sector, axis=1)\n",
