small bugs corrected

--- a/Xplore_rules/add_electricity.ipynb
+++ b/Xplore_rules/add_electricity.ipynb
@@ -312,10 +312,8 @@
     "### Define gdf_regions\n",
     "if 'off' in carrier:\n",
     "    gdf_regions = gdf_regions_offshore\n",
-    "    is_offshore = True\n",
     "else:\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "### Add map features\n",
@@ -357,7 +355,6 @@
     "\n",
     "    ### Define gdf_regions\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "    ### Define NUTS file\n",
@@ -571,10 +568,8 @@
     "### Define gdf_regions\n",
     "if 'off' in carrier:\n",
     "    gdf_regions = gdf_regions_offshore\n",
-    "    is_offshore = True\n",
     "else:\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "### Add map features\n",
@@ -921,7 +916,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature aggregated at NUTS regions\n",
-    "xp.map_NUTS_loadst_pset(n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_loadst_pset'], params_local)"
+    "xp.map_NUTS_loadst_pset(n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_loadst_pset'], params_local)"
    ]
   },
   {
@@ -1073,7 +1068,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature aggregated at NUTS regions\n",
-    "xp.map_NUTS_storage_units(carrier, n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_storage_units'], params_local)"
+    "xp.map_NUTS_storage_units(carrier, n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_storage_units'], params_local)"
    ]
   },
   {
@@ -1140,7 +1135,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur_linux-pinned",
+   "display_name": "pypsa-eur",
    "language": "python",
    "name": "python3"
   },
