--- a/Xplore_rules/prepare_network.ipynb
+++ b/Xplore_rules/prepare_network.ipynb
@@ -313,10 +313,8 @@
     "### Define gdf_regions\n",
     "if 'off' in carrier:\n",
     "    gdf_regions = gdf_regions_offshore\n",
-    "    is_offshore = True\n",
     "else:\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "### Add map features\n",
@@ -358,7 +356,6 @@
     "\n",
     "    ### Define gdf_regions\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "    ### Define NUTS file\n",
@@ -572,10 +569,8 @@
     "### Define gdf_regions\n",
     "if 'off' in carrier:\n",
     "    gdf_regions = gdf_regions_offshore\n",
-    "    is_offshore = True\n",
     "else:\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "### Add map features\n",
@@ -922,7 +917,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature aggregated at NUTS regions\n",
-    "xp.map_NUTS_loadst_pset(n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_loadst_pset'], params_local)"
+    "xp.map_NUTS_loadst_pset(n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_loadst_pset'], params_local)"
    ]
   },
   {
@@ -1074,7 +1069,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature aggregated at NUTS regions\n",
-    "xp.map_NUTS_storage_units(carrier, n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_storage_units'], params_local)"
+    "xp.map_NUTS_storage_units(carrier, n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_storage_units'], params_local)"
    ]
   },
   {
@@ -1155,7 +1150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
