--- a/Xplore_rules/prepare_sector_network.ipynb
+++ b/Xplore_rules/prepare_sector_network.ipynb
@@ -315,10 +315,8 @@
     "### Define gdf_regions\n",
     "if 'off' in carrier:\n",
     "    gdf_regions = gdf_regions_offshore\n",
-    "    is_offshore = True\n",
     "else:\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "### Add map features\n",
@@ -360,7 +358,6 @@
     "\n",
     "    ### Define gdf_regions\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "    ### Define NUTS file\n",
@@ -574,10 +571,8 @@
     "### Define gdf_regions\n",
     "if 'off' in carrier:\n",
     "    gdf_regions = gdf_regions_offshore\n",
-    "    is_offshore = True\n",
     "else:\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "### Add map features\n",
@@ -1071,7 +1066,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature aggregated at NUTS regions\n",
-    "xp.map_NUTS_loadst_pset(n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_loadst_pset'], params_local)"
+    "xp.map_NUTS_loadst_pset(n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_loadst_pset'], params_local)"
    ]
   },
   {
@@ -1223,7 +1218,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature aggregated at NUTS regions\n",
-    "xp.map_NUTS_storage_units(carrier, n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_storage_units'], params_local)"
+    "xp.map_NUTS_storage_units(carrier, n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_storage_units'], params_local)"
    ]
   },
   {
@@ -1304,7 +1299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
