--- a/Xplore_rules/solve_sector_network.ipynb
+++ b/Xplore_rules/solve_sector_network.ipynb
@@ -291,10 +291,8 @@
     "### Define gdf_regions\n",
     "if 'off' in carrier:\n",
     "    gdf_regions = gdf_regions_offshore\n",
-    "    is_offshore = True\n",
     "else:\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "### Add map features\n",
@@ -336,7 +334,6 @@
     "\n",
     "    ### Define gdf_regions\n",
     "    gdf_regions = gdf_regions_onshore\n",
-    "    is_offshore = False\n",
     "\n",
     "\n",
     "    ### Define NUTS file\n",
@@ -429,6 +426,136 @@
     "ax.set_xlabel('EUR/(MW·year)')\n",
     "ax.legend()\n",
     "ax.grid(True, linestyle='--', alpha=0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variable: `n.generators_t[p]`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Place `n.generators_t[p]` in a dataFrame and show its content."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ggt_p = n.generators_t['p']\n",
+    "\n",
+    "ggt_p.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Time series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do the dispatched generation time series look like?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "carrier = 'onwind'\n",
+    "\n",
+    "# For wind and solar, define class (number or 'all').\n",
+    "gen_class = 'all'\n",
+    "    \n",
+    "start = '2023-03-01'\n",
+    "end = '2023-03-10'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Figure\n",
+    "fig_size = [10,4]\n",
+    "fig, ax = plt.subplots(figsize=fig_size)\n",
+    "\n",
+    "if ('wind' in carrier or 'solar' in carrier) and gen_class != 'all':\n",
+    "    ggt_p.loc[start:end].filter(like=f'{gen_class} {carrier}').plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
+    "else:\n",
+    "    ggt_p.loc[start:end].filter(like=carrier).plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
+    "\n",
+    "ax.grid(True, linestyle='--', alpha=0.25)\n",
+    "ax.set_ylabel('')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Maps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot a map showing a particular feature of the potential generation for a carrier at each region."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "\n",
+    "##### Select carrier:\n",
+    "carrier = 'offwind-float'\n",
+    "\n",
+    "# For wind and solar, define class (number).\n",
+    "gen_class = 0\n",
+    "\n",
+    "##### Select feature (uncomment one of the following):\n",
+    "feature = 'AEP' \n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Local params\n",
+    "params_local = {}\n",
+    "params_local['vmin'] = ''   # Leave empty for automatic value \n",
+    "params_local['vmax'] = ''   # Leave empty for automatic value\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Figure\n",
+    "fig_size = [12,6]\n",
+    "crs = ccrs.PlateCarree()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=fig_size, subplot_kw={'projection': crs})\n",
+    "\n",
+    "\n",
+    "### Define gdf_regions\n",
+    "if 'off' in carrier:\n",
+    "    gdf_regions = gdf_regions_offshore\n",
+    "else:\n",
+    "    gdf_regions = gdf_regions_onshore\n",
+    "\n",
+    "\n",
+    "### Add map features\n",
+    "xp.map_add_features(ax, params['map_add_features'])\n",
+    "\n",
+    "### Add network feature at regions\n",
+    "xp.map_network_generatorst_p(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_p'], params_local, gen_class)"
    ]
   },
   {
@@ -918,7 +1045,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature aggregated at NUTS regions\n",
-    "xp.map_NUTS_loadst_pset(n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_loadst_pset'], params_local)"
+    "xp.map_NUTS_loadst_pset(n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_loadst_pset'], params_local)"
    ]
   },
   {
@@ -1070,7 +1197,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature aggregated at NUTS regions\n",
-    "xp.map_NUTS_storage_units(carrier, n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_storage_units'], params_local)"
+    "xp.map_NUTS_storage_units(carrier, n, f'{feature}_NUTS', ax, gdf_regions_onshore, gdf_NUTS, params['map_NUTS_storage_units'], params_local)"
    ]
   },
   {
@@ -1222,8 +1349,6 @@
     "    gdf_NUTS = gdf_NUTS3    \n",
     "\n",
     "\n",
-    "### Add regions\n",
-    "xp.map_add_region(ax, gdf_regions_onshore, params['map_add_region'], is_offshore=is_offshore)\n",
     "\n",
     "### Add map features\n",
     "xp.map_add_features(ax, params['map_add_features'])\n",
@@ -1477,7 +1602,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-spain_20250619",
+   "display_name": "pypsa-eur",
    "language": "python",
    "name": "python3"
   },
@@ -1491,7 +1616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
