--- a/Xplore_rules/solve_sector_network.ipynb
+++ b/Xplore_rules/solve_sector_network.ipynb
@@ -29,7 +29,7 @@
     "prefix = ''\n",
     "\n",
     "### Network\n",
-    "clusters = 5\n",
+    "clusters = 10\n",
     "opts = ''\n",
     "sector_opts = ''\n",
     "horizon = '2030'"
@@ -520,7 +520,7 @@
     "#################### Parameters\n",
     "\n",
     "##### Select carrier:\n",
-    "carrier = 'offwind-float'\n",
+    "carrier = 'onwind'\n",
     "\n",
     "# For wind and solar, define class (number).\n",
     "gen_class = 0\n",
@@ -696,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Place DC links in a dataFrame and show its content."
+    "Place DC links in a dataFrame and show its content. Include interconnections."
    ]
   },
   {
@@ -705,7 +705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lk_DC = lk.loc[lk['carrier']=='DC']\n",
+    "lk_DC = lk[lk['carrier'].isin(['DC', 'DC_ic export', 'DC_ic import'])]\n",
     "\n",
     "lk_DC.head()"
    ]
@@ -1506,40 +1506,48 @@
     "# cong_criterion = ('mean', 'na')\n",
     "cong_criterion = ('quantile', 0.9)\n",
     "\n",
-    "### Define line and link widths\n",
+    "\n",
+    "### Define line widths\n",
     "line_widths = 1*(n.lines.s_nom_opt) / 1e3\n",
-    "link_widths = 0*(n.links.p_nom_opt) / 1e3\n",
-    "link_widths.loc[n.links.index.str.contains('ic')] = 1 * n.links.loc[n.links.index.str.contains('ic'), 'p_nom_opt'] / 1e3\n",
-    "link_widths.loc[n.links.index.str.contains('relation')] = 1 * n.links.loc[n.links.index.str.contains('relation'), 'p_nom_opt'] / 1e3\n",
+    "\n",
+    "##### WIP\n",
+    "### Define link widths\n",
+    "# first all at zero, then change those that are relevant\n",
+    "link_widths = 0*(n.links.p_nom_opt) / 1e3 \n",
+    "# # Set values to DC links and DC_ic_export links (export links will later include link activity in both directions)\n",
+    "# lk_DC = lk[lk['carrier'].isin(['DC', 'DC_ic export'])]\n",
+    "# link_widths.loc[lk_DC.index] = 1 * lk_DC['p_nom_opt'] / 1e3\n",
     "\n",
     "\n",
-    "\n",
-    "#################### This is a patch for considering ES interconnections\n",
-    "\n",
+    "# #################### Time series with line loads (positive and negative)\n",
     "lnt_p0 = n.lines_t['p0']\n",
-    "lkt_p0 = n.links_t['p0']\n",
+    "##### WIP\n",
+    "# lkt_p0 = n.links_t['p0']\n",
+    "##### WIP\n",
     "\n",
     "\n",
-    "# for interconnections\n",
-    "for interconnection in ['FR0', 'FR1', 'PT0', 'PT1']:\n",
-    "    try:\n",
-    "        join_power = lkt_p0[f'ES {interconnection} ic'] - lkt_p0[f'ES {interconnection} ic-reversed']\n",
-    "        lkt_p0[f'ES {interconnection} ic'] = join_power\n",
-    "        lkt_p0[f'ES {interconnection} ic-reversed'] = join_power\n",
-    "    except KeyError:\n",
-    "        join_power = 0\n",
+    "\n",
+    "# ##### for interconnections\n",
+    "# # \n",
+    "# for interconnection in n.links.loc[n.links.index.str.contains('export')].index:\n",
+    "#     try:\n",
+    "#         join_power = lkt_p0[interconnection] + lkt_p0[interconnection.replace('export', 'import')]\n",
+    "#         lkt_p0[interconnection] = join_power        \n",
+    "#     except KeyError:\n",
+    "#         join_power = 0\n",
     "        \n",
     "    \n",
     "\n",
-    "# for link with Balearic islands\n",
-    "for interconnection in n.links.loc[n.links.index.str.contains('relation')].index:\n",
-    "    if 'reversed' not in interconnection:\n",
-    "        try:\n",
-    "            join_power = lkt_p0[interconnection] - lkt_p0[f'{interconnection}-reversed']\n",
-    "            lkt_p0[interconnection] = join_power\n",
-    "            lkt_p0[f'{interconnection}-reversed'] = join_power\n",
-    "        except KeyError:\n",
-    "            join_power = 0\n",
+    "\n",
+    "# # for link with Balearic islands\n",
+    "# for interconnection in n.links.loc[n.links.index.str.contains('relation')].index:\n",
+    "#     if 'reversed' not in interconnection:\n",
+    "#         try:\n",
+    "#             join_power = lkt_p0[interconnection] - lkt_p0[f'{interconnection}-reversed']\n",
+    "#             lkt_p0[interconnection] = join_power\n",
+    "#             lkt_p0[f'{interconnection}-reversed'] = join_power\n",
+    "#         except KeyError:\n",
+    "#             join_power = 0\n",
     "\n",
     "\n",
     "\n",
@@ -1548,18 +1556,20 @@
     "\n",
     "if cong_criterion[0] == 'mean':\n",
     "    ln_result_criterion = lnt_p0.abs().mean() / n.lines['s_nom']\n",
-    "    lk_result_criterion = lkt_p0.abs().mean() / n.links['p_nom']\n",
+    "    # lk_result_criterion = lkt_p0.abs().mean() / n.links['p_nom']\n",
     "    title_cb = 'Mean of line CF'\n",
     "if cong_criterion[0] == 'quantile':\n",
     "    ln_result_criterion = lnt_p0.abs().quantile(cong_criterion[1]) / n.lines['s_nom']\n",
-    "    lk_result_criterion = lkt_p0.abs().quantile(cong_criterion[1]) / n.links['p_nom']\n",
+    "    # lk_result_criterion = lkt_p0.abs().quantile(cong_criterion[1]) / n.links['p_nom']\n",
     "    title_cb = f'Q{cong_criterion[1]} of line CF'\n",
+    "\n",
+    "ln_result_criterion\n",
     "\n",
     "norm = mcolors.Normalize(vmin=0, vmax=0.7)\n",
     "cmap = plt.cm.rainbow  # You can choose any colormap you like\n",
     "\n",
     "ln_colors = [cmap(norm(p)) for p in ln_result_criterion]\n",
-    "lk_colors = [cmap(norm(p)) for p in lk_result_criterion]\n",
+    "# lk_colors = [cmap(norm(p)) for p in lk_result_criterion]\n",
     "\n",
     "\n",
     "\n",
@@ -1575,7 +1585,7 @@
     "       line_widths=line_widths, \n",
     "       link_widths=link_widths, \n",
     "       line_colors=ln_colors, \n",
-    "       link_colors=lk_colors,\n",
+    "       #link_colors=lk_colors,\n",
     "       bus_sizes=params['bus_sizes'], \n",
     "       bus_colors=params['bus_colors'], \n",
     "       boundaries=params['boundaries_offshore']\n",
@@ -1598,11 +1608,62 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis: Interconnections"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are the energy imports and exports?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exports_t = n.links_t['p0'].filter(like='export')\n",
+    "imports_t = n.links_t['p1'].filter(like='import')\n",
+    "\n",
+    "import_sums = imports_t.div(1e6).sum()\n",
+    "export_sums = exports_t.div(1e6).sum()\n",
+    "\n",
+    "import_bar = pd.DataFrame(import_sums).T\n",
+    "export_bar = pd.DataFrame(export_sums).T\n",
+    "\n",
+    "import_bar.index = ['Imports']\n",
+    "export_bar.index = ['Exports']\n",
+    "\n",
+    "combined = pd.concat([import_bar, export_bar])\n",
+    "\n",
+    "colors = ['#1f77b4', \n",
+    "          '#709cdf',\n",
+    "          '#2ca02c',\n",
+    "          '#4dd148']\n",
+    "\n",
+    "\n",
+    "#################### Figure\n",
+    "fig_size = [6,6]\n",
+    "fig, ax = plt.subplots(figsize=fig_size)\n",
+    "\n",
+    "combined.plot(kind='bar', stacked=True, color=colors, ax=ax)\n",
+    "\n",
+    "ax.set_ylabel(\"TWh\")\n",
+    "ax.legend()\n",
+    "ax.grid(True, linestyle='--', linewidth=0.5, color='black', alpha=0.25)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur",
+   "display_name": "pypsa-eur_5767",
    "language": "python",
    "name": "python3"
   },
@@ -1616,7 +1677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
