--- a/Xplore_rules/solve_sector_network.ipynb
+++ b/Xplore_rules/solve_sector_network.ipynb
@@ -1630,7 +1630,7 @@
    "outputs": [],
    "source": [
     "exports_t = n.links_t['p0'].filter(like='export')\n",
-    "imports_t = n.links_t['p1'].filter(like='import')\n",
+    "imports_t = -n.links_t['p1'].filter(like='import')\n",
     "\n",
     "import_sums = imports_t.div(1e6).sum()\n",
     "export_sums = exports_t.div(1e6).sum()\n",
