--- a/Xplore_rules/add_electricity.ipynb
+++ b/Xplore_rules/add_electricity.ipynb
@@ -239,9 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the aggregated capacity per carrier? \n",
-    "\n",
-    "How many buses have generators for each carrier? How many of them have zero capacity?"
+    "What is the aggregated capacity per carrier? What is the potential capacity per carrier?"
    ]
   },
   {
@@ -252,10 +250,53 @@
    "source": [
     "gg.groupby('carrier').agg(\n",
     "    Total_capacity=pd.NamedAgg(column='p_nom', aggfunc='sum'),\n",
-    "    Buses=pd.NamedAgg(column='p_nom', aggfunc='size'),\n",
-    "    Buses_zero_capacity=pd.NamedAgg(column='p_nom', aggfunc=lambda x: (x == 0).sum()),\n",
-    "    Buses_non_zero_capacity=pd.NamedAgg(column='p_nom', aggfunc=lambda x: (x != 0).sum()),\n",
+    "    Total_max_capacity=pd.NamedAgg(column='p_nom_max', aggfunc='sum'),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summary by resource class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solar and wind carries may have classes. Show a table with a feature per bus and class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "\n",
+    "### Select carrier\n",
+    "carrier = 'onwind'\n",
+    "\n",
+    "### Select feature (uncomment one of the following):\n",
+    "feature = 'p_nom'\n",
+    "#feature = 'p_nom_max'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Table\n",
+    "### Filter\n",
+    "gg_filtered = gg[gg['carrier']==carrier][['bus', 'p_nom', 'p_nom_max']]\n",
+    "### Add class column\n",
+    "gg_filtered['resource_class'] = gg_filtered.index.to_series().str.split(\" \").str[-2]\n",
+    "### Make pivot\n",
+    "gg_pivot = gg_filtered.pivot(index=\"bus\", columns=\"resource_class\", values=feature)\n",
+    "\n",
+    "gg_pivot.style \\\n",
+    "    .set_caption(f\"Table with {feature} for {carrier}, according to bus and class.\") \\\n",
+    "    .format(\"{:.0f}\") \\\n",
+    "    .background_gradient(cmap=\"Blues\")\n"
    ]
   },
   {
@@ -284,6 +325,9 @@
     "\n",
     "### Select carrier\n",
     "carrier = 'onwind'\n",
+    "\n",
+    "### For solar & onwind carriers, select the class number ('all' to aggregate all classes)\n",
+    "resource_class = 'all'\n",
     "\n",
     "### Select feature (uncomment one of the following):\n",
     "# feature = 'area' \n",
@@ -320,7 +364,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature at regions\n",
-    "xp.map_network_generators(carrier, n, feature, ax, gdf_regions, params['map_network_generators'], params_local)"
+    "xp.map_network_generators(carrier, n, feature, ax, gdf_regions, resource_class, params['map_network_generators'], params_local)"
    ]
   },
   {
@@ -368,7 +412,7 @@
     "    xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "    ### Add network feature aggregated at NUTS regions\n",
-    "    xp.map_NUTS_generators(carrier, n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, params['map_NUTS_generators'], params_local)\n"
+    "    xp.map_NUTS_generators(carrier, n, f'{feature}_NUTS', ax, gdf_regions, gdf_NUTS, resource_class, params['map_NUTS_generators'], params_local)\n"
    ]
   },
   {
@@ -495,11 +539,14 @@
    "outputs": [],
    "source": [
     "#################### Parameters\n",
+    "\n",
+    "### Select carrier\n",
     "carrier = 'onwind'\n",
     "\n",
-    "# For wind and solar, define class (number or 'all').\n",
-    "gen_class = 'all'\n",
+    "### For solar & onwind carriers, select the class number ('all' to plot all classes)\n",
+    "resource_class = 'all'\n",
     "    \n",
+    "### Define period\n",
     "start = '2023-03-01'\n",
     "end = '2023-03-10'\n",
     "\n",
@@ -509,13 +556,69 @@
     "fig_size = [10,4]\n",
     "fig, ax = plt.subplots(figsize=fig_size)\n",
     "\n",
-    "if ('wind' in carrier or 'solar' in carrier) and gen_class != 'all':\n",
-    "    ggt_pmaxpu.loc[start:end].filter(like=f'{gen_class} {carrier}').plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
+    "if ('wind' in carrier or 'solar' in carrier) and resource_class != 'all':\n",
+    "    ggt_pmaxpu.loc[start:end].filter(like=f'{resource_class} {carrier}').plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
     "else:\n",
     "    ggt_pmaxpu.loc[start:end].filter(like=carrier).plot(ax=ax, alpha=.7, legend=False, linewidth=.5)\n",
     "\n",
     "ax.grid(True, linestyle='--', alpha=0.25)\n",
     "ax.set_ylabel('')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summary by resource class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solar and wind carries may have classes. Show a table with a feature per bus and class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################### Parameters\n",
+    "\n",
+    "### Select carrier\n",
+    "carrier = 'solar'\n",
+    "\n",
+    "### Select feature (uncomment one of the following):\n",
+    "feature = 'CF'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#################### Table\n",
+    "### Filter\n",
+    "ggt_pmaxpu_filtered = ggt_pmaxpu.filter(like=carrier, axis=1).mean().to_frame(name='CF')\n",
+    "\n",
+    "ggt_pmaxpu_filtered\n",
+    "### Add class and bus columns\n",
+    "# Use multi-index with 'bus' and 'carrier'\n",
+    "# Note that the index for onwind, solar is 'bus-class-carrier'\n",
+    "# while for the rest is just 'bus-carrier'\n",
+    "if ('wind' in carrier or 'solar' in carrier):        \n",
+    "    split_index = ggt_pmaxpu_filtered.index.to_series().str.rsplit(' ', n=2, expand=True)\n",
+    "    ggt_pmaxpu_filtered['bus'] = split_index[0].values\n",
+    "    ggt_pmaxpu_filtered['resource_class'] = split_index[1].astype(int) # resource_class as integer\n",
+    "else:\n",
+    "    split_index = df.index.to_series().str.rsplit(' ', n=1, expand=True)\n",
+    "    ggt_pmaxpu_filtered['bus'] = split_index[0].values\n",
+    "\n",
+    "### Make pivot\n",
+    "ggt_pmaxpu_pivot = ggt_pmaxpu_filtered.pivot(index=\"bus\", columns=\"resource_class\", values=feature)\n",
+    "\n",
+    "ggt_pmaxpu_pivot.style \\\n",
+    "    .set_caption(f\"Table with {feature} for {carrier}, according to bus and class.\") \\\n",
+    "    .format(\"{:.3f}\") \\\n",
+    "    .background_gradient(cmap=\"Blues\")"
    ]
   },
   {
@@ -543,8 +646,8 @@
     "##### Select carrier:\n",
     "carrier = 'onwind'\n",
     "\n",
-    "# For wind and solar, define class (number).\n",
-    "gen_class = 0\n",
+    "### For solar & onwind carriers, select the class number (note that here, 'all' is not valid)\n",
+    "resource_class = 0\n",
     "\n",
     "##### Select feature (uncomment one of the following):\n",
     "feature = 'CF' \n",
@@ -576,7 +679,7 @@
     "xp.map_add_features(ax, params['map_add_features'])\n",
     "\n",
     "### Add network feature at regions\n",
-    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local, gen_class)"
+    "xp.map_network_generatorst_pmaxpu(carrier, n, feature, ax, gdf_regions, params['map_network_generatorst_pmaxpu'], params_local, resource_class)"
    ]
   },
   {
@@ -1135,7 +1238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur",
+   "display_name": "pypsa-spain",
    "language": "python",
    "name": "python3"
   },
@@ -1149,7 +1252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
