--- a/Xplore_rules/solve_sector_network.ipynb
+++ b/Xplore_rules/solve_sector_network.ipynb
@@ -979,7 +979,7 @@
     "    ### Make pivot\n",
     "    ggt_p_pivot = ggt_p_filtered.pivot(index=\"bus\", columns=\"resource_class\", values=feature)\n",
     "\n",
-    "    styled_table = ggt_pmaxpu_pivot.style \\\n",
+    "    styled_table = ggt_p_pivot.style \\\n",
     "        .set_caption(f\"Table with {feature} [TWh] for {carrier}, according to bus and class.\") \\\n",
     "        .format(\"{:.3f}\") \\\n",
     "        .background_gradient(cmap=\"Blues\")\n",
