--- a/Xplore_rules/solve_sector_network.ipynb
+++ b/Xplore_rules/solve_sector_network.ipynb
@@ -396,7 +396,7 @@
     "        ax.bar(\n",
     "            pos,\n",
     "            df_res[metric],\n",
-    "            width=width/3,\n",
+    "            width=width/len(resources),\n",
     "            color=colors[metric],\n",
     "            alpha=0.7,\n",
     "            label=label\n",
@@ -787,7 +787,7 @@
     "        ax.bar(\n",
     "            pos,\n",
     "            df_res[metric],\n",
-    "            width=width/3,\n",
+    "            width=width/len(resources),\n",
     "            color=colors[metric],\n",
     "            alpha=0.7,\n",
     "            label=label\n",
@@ -1042,7 +1042,7 @@
     "        ax.bar(\n",
     "            pos,\n",
     "            df_res[metric],\n",
-    "            width=width/3,\n",
+    "            width=width/len(resources),\n",
     "            color=colors[metric],\n",
     "            alpha=0.7,\n",
     "            label=label\n",
