--- a/Xplore_rules/prepare_network.ipynb
+++ b/Xplore_rules/prepare_network.ipynb
@@ -363,7 +363,7 @@
     "        ax.bar(\n",
     "            pos,\n",
     "            df_res[metric],\n",
-    "            width=width/3,\n",
+    "            width=width/len(resources),\n",
     "            color=colors[metric],\n",
     "            alpha=0.7,\n",
     "            label=label\n",
@@ -751,7 +751,7 @@
     "        ax.bar(\n",
     "            pos,\n",
     "            df_res[metric],\n",
-    "            width=width/3,\n",
+    "            width=width/len(resources),\n",
     "            color=colors[metric],\n",
     "            alpha=0.7,\n",
     "            label=label\n",
