--- a/Xplore_rules/add_electricity.ipynb
+++ b/Xplore_rules/add_electricity.ipynb
@@ -362,7 +362,7 @@
     "        ax.bar(\n",
     "            pos,\n",
     "            df_res[metric],\n",
-    "            width=width/3,\n",
+    "            width=width/len(resources),\n",
     "            color=colors[metric],\n",
     "            alpha=0.7,\n",
     "            label=label\n",
@@ -750,7 +750,7 @@
     "        ax.bar(\n",
     "            pos,\n",
     "            df_res[metric],\n",
-    "            width=width/3,\n",
+    "            width=width/len(resources),\n",
     "            color=colors[metric],\n",
     "            alpha=0.7,\n",
     "            label=label\n",
