--- a/Xplore_rules/prepare_sector_network.ipynb
+++ b/Xplore_rules/prepare_sector_network.ipynb
@@ -365,7 +365,7 @@
     "        ax.bar(\n",
     "            pos,\n",
     "            df_res[metric],\n",
-    "            width=width/3,\n",
+    "            width=width/len(resources),\n",
     "            color=colors[metric],\n",
     "            alpha=0.7,\n",
     "            label=label\n",
@@ -753,7 +753,7 @@
     "        ax.bar(\n",
     "            pos,\n",
     "            df_res[metric],\n",
-    "            width=width/3,\n",
+    "            width=width/len(resources),\n",
     "            color=colors[metric],\n",
     "            alpha=0.7,\n",
     "            label=label\n",
