--- a/Xplore_rules/retrieve_cutout.ipynb
+++ b/Xplore_rules/retrieve_cutout.ipynb
@@ -24,7 +24,8 @@
    "source": [
     "######################################## Parameters\n",
     "\n",
-    "cutout_file = 'europe-2013-sarah3-era5.nc'"
+    "cutout_file = 'europe-2013-sarah3-era5.nc'\n",
+    "cutout_directory = 'cutouts/'"
    ]
   },
   {
@@ -79,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = f'{params['rootpath']}/cutouts/'\n",
+    "path = f'{params['rootpath']}/{cutout_directory}'\n",
     "\n",
     "cutout = xr.open_dataset(path+cutout_file)\n",
     "\n",
@@ -309,7 +310,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur",
+   "display_name": "pypsa-spain",
    "language": "python",
    "name": "python3"
   },
@@ -323,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
