making PyPSA-Xplore compatible with PyPSA-Eur

--- a/Xplore_rules/prepare_sector_network.ipynb
+++ b/Xplore_rules/prepare_sector_network.ipynb
@@ -29,7 +29,7 @@
     "prefix = ''\n",
     "\n",
     "### Network\n",
-    "clusters = 8\n",
+    "clusters = 'adm'\n",
     "opts = ''\n",
     "sector_opts = ''\n",
     "horizon = '2030'"
@@ -80,8 +80,18 @@
     "file_NUTS2 = 'NUTS2_ES.geojson'\n",
     "file_NUTS3 = 'NUTS3_ES.geojson'\n",
     "path_NUTS = f'{params['rootpath']}/data_ES/nuts/'\n",
-    "gdf_NUTS2 = gpd.read_file(path_NUTS+file_NUTS2)\n",
-    "gdf_NUTS3 = gpd.read_file(path_NUTS+file_NUTS3)\n"
+    "# Load NUTS2\n",
+    "if os.path.exists(path_NUTS + file_NUTS2):\n",
+    "    gdf_NUTS2 = gpd.read_file(path_NUTS + file_NUTS2)\n",
+    "else:\n",
+    "    print('File NUTS2 not found...')\n",
+    "    token_NUTS2_missing = True\n",
+    "# Load NUTS3\n",
+    "if os.path.exists(path_NUTS + file_NUTS3):\n",
+    "    gdf_NUTS3 = gpd.read_file(path_NUTS + file_NUTS3)\n",
+    "else:\n",
+    "    print('File NUTS3 not found...')\n",
+    "    token_NUTS3_missing = True\n"
    ]
   },
   {
@@ -126,6 +136,8 @@
    "outputs": [],
    "source": [
     "#################### Parameters\n",
+    "spatial_domain = 'ES' # 'EU'\n",
+    "\n",
     "line_widths = 1*n.lines.s_nom / 1e3\n",
     "link_widths = 1*n.links.p_nom / 1e3\n",
     "\n",
@@ -144,7 +156,7 @@
     "       link_widths=link_widths, \n",
     "       bus_sizes=params['bus_sizes'], \n",
     "       bus_colors=params['bus_colors'], \n",
-    "       boundaries=params['boundaries_offshore'])\n",
+    "       boundaries=params[f'boundaries_offshore_{spatial_domain}'])\n",
     "\n",
     "### Add regions_onshore\n",
     "xp.map_add_region(ax, gdf_regions_onshore, params['map_add_region'])\n",
