--- a/Xplore_rules/solve_sector_network.ipynb
+++ b/Xplore_rules/solve_sector_network.ipynb
@@ -29,7 +29,7 @@
     "prefix = ''\n",
     "\n",
     "### Network\n",
-    "clusters = 8\n",
+    "clusters = 'adm'\n",
     "opts = ''\n",
     "sector_opts = ''\n",
     "horizon = '2030'"
@@ -81,8 +81,18 @@
     "file_NUTS2 = 'NUTS2_ES.geojson'\n",
     "file_NUTS3 = 'NUTS3_ES.geojson'\n",
     "path_NUTS = f'{params['rootpath']}/data_ES/nuts/'\n",
-    "gdf_NUTS2 = gpd.read_file(path_NUTS+file_NUTS2)\n",
-    "gdf_NUTS3 = gpd.read_file(path_NUTS+file_NUTS3)\n"
+    "# Load NUTS2\n",
+    "if os.path.exists(path_NUTS + file_NUTS2):\n",
+    "    gdf_NUTS2 = gpd.read_file(path_NUTS + file_NUTS2)\n",
+    "else:\n",
+    "    print('File NUTS2 not found...')\n",
+    "    token_NUTS2_missing = True\n",
+    "# Load NUTS3\n",
+    "if os.path.exists(path_NUTS + file_NUTS3):\n",
+    "    gdf_NUTS3 = gpd.read_file(path_NUTS + file_NUTS3)\n",
+    "else:\n",
+    "    print('File NUTS3 not found...')\n",
+    "    token_NUTS3_missing = True\n"
    ]
   },
   {
@@ -127,6 +137,8 @@
    "outputs": [],
    "source": [
     "#################### Parameters\n",
+    "spatial_domain = 'ES' # 'EU'\n",
+    "\n",
     "line_widths_0 = 1*n.lines.s_nom / 1e3\n",
     "link_widths_0 = 1*n.links.p_nom / 1e3\n",
     "\n",
@@ -150,7 +162,7 @@
     "       link_widths=link_widths_0, \n",
     "       bus_sizes=params['bus_sizes'], \n",
     "       bus_colors=params['bus_colors'], \n",
-    "       boundaries=params['boundaries_offshore'])\n",
+    "       boundaries=params[f'boundaries_offshore_{spatial_domain}'])\n",
     "\n",
     "### Add regions_onshore\n",
     "xp.map_add_region(ax0, gdf_regions_onshore, params['map_add_region'])\n",
@@ -172,7 +184,7 @@
     "       link_widths=link_widths_1, \n",
     "       bus_sizes=params['bus_sizes'], \n",
     "       bus_colors=params['bus_colors'], \n",
-    "       boundaries=params['boundaries_offshore'])\n",
+    "       boundaries=params[f'boundaries_offshore_{spatial_domain}'])\n",
     "\n",
     "### Add regions_onshore\n",
     "xp.map_add_region(ax1, gdf_regions_onshore, params['map_add_region'])\n",
@@ -2070,7 +2082,7 @@
     "       link_widths=link_widths, \n",
     "       bus_sizes=params['bus_sizes'], \n",
     "       bus_colors=params['bus_colors'], \n",
-    "       boundaries=params['boundaries_offshore'])\n",
+    "       boundaries=params[f'boundaries_offshore_{spatial_domain}'])\n",
     "\n",
     "### Add regions_onshore\n",
     "xp.map_add_region(ax, gdf_regions_onshore, params['map_add_region'])\n",
@@ -2197,7 +2209,7 @@
     "       #link_colors=lk_colors,\n",
     "       bus_sizes=params['bus_sizes'], \n",
     "       bus_colors=params['bus_colors'], \n",
-    "       boundaries=params['boundaries_offshore']\n",
+    "       boundaries=params[f'boundaries_offshore_{spatial_domain}']\n",
     "       )\n",
     "\n",
     "\n",
@@ -2229,6 +2241,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This analysis is only for PyPSA-Spain, with the interconnections enabled.\n",
+    "\n",
     "What are the energy imports and exports?"
    ]
   },
