--- a/Xplore_rules/base_network.ipynb
+++ b/Xplore_rules/base_network.ipynb
@@ -112,6 +112,8 @@
    "outputs": [],
    "source": [
     "#################### Parameters\n",
+    "spatial_domain = 'ES' # 'EU'\n",
+    "\n",
     "line_widths = 1*n.lines.s_nom / 1e3\n",
     "link_widths = 1*n.links.p_nom / 1e3\n",
     "\n",
@@ -130,7 +132,7 @@
     "       link_widths=link_widths, \n",
     "       bus_sizes=params['bus_sizes'], \n",
     "       bus_colors=params['bus_colors'], \n",
-    "       boundaries=params['boundaries_offshore'])\n",
+    "       boundaries=params[f'boundaries_offshore_{spatial_domain}'])\n",
     "\n",
     "### Add regions_onshore\n",
     "xp.map_add_region(ax, gdf_regions_onshore, params['map_add_region'])\n",
@@ -497,7 +499,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur",
+   "display_name": "pypsa-spain",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
