--- a/Xplore_rules/cluster_network.ipynb
+++ b/Xplore_rules/cluster_network.ipynb
@@ -33,7 +33,7 @@
     "prefix = ''\n",
     "\n",
     "### Network\n",
-    "clusters = 5"
+    "clusters = 'adm'"
    ]
   },
   {
@@ -117,6 +117,8 @@
    "outputs": [],
    "source": [
     "#################### Parameters\n",
+    "spatial_domain = 'ES' # 'EU'\n",
+    "\n",
     "line_widths = 1*n.lines.s_nom / 1e3\n",
     "link_widths = 1*n.links.p_nom / 1e3\n",
     "\n",
@@ -135,7 +137,7 @@
     "       link_widths=link_widths, \n",
     "       bus_sizes=params['bus_sizes'], \n",
     "       bus_colors=params['bus_colors'], \n",
-    "       boundaries=params['boundaries_offshore'])\n",
+    "       boundaries=params[f'boundaries_offshore_{spatial_domain}'])\n",
     "\n",
     "### Add regions_onshore\n",
     "xp.map_add_region(ax, gdf_regions_onshore, params['map_add_region'])\n",
@@ -424,7 +426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-eur_linux-pinned",
+   "display_name": "pypsa-spain",
    "language": "python",
    "name": "python3"
   },
@@ -438,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
